[package]
name = "wave"
version = "0.1.0"
edition = "2024"

[dependencies]
pest = "2.8.1"
pest_derive = {version = "2.8.1", features = ["grammar-extras"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
pest_ascii_tree = "0.1.0"
pretty_assertions = "1.4.1"
